--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#000000"
+    android:background="#05161E"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -14,29 +14,35 @@
         android:layout_height="127dp"
         android:background="@drawable/rounded_corner"
         android:fontFamily="monospace"
-        android:text="Convert Text to Summary" />
+        android:text="Convert Text to Summary"
+        android:onClick="summary"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/notepad"
+        android:onClick="notepad"
         android:layout_margin="25dp"
         android:layout_width="141dp"
         android:layout_height="127dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:background="@drawable/rounded_corner"
         android:fontFamily="monospace"
-        android:text="Notepad" />
+        android:text="Notepad"
+        android:textColor="#000000"/>
 
     <Button
         android:id="@+id/tutorial"
         android:layout_width="141dp"
         android:layout_height="127dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/summary"
-        android:layout_marginTop="186dp"
+        android:layout_marginBottom="168dp"
         android:background="@drawable/rounded_corner"
         android:fontFamily="monospace"
-        android:text="Tutorial" />
+        android:onClick="tutorial"
+        android:text="Tutorial"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/alarm"
@@ -46,8 +52,10 @@
         android:layout_alignTop="@+id/tutorial"
         android:background="@drawable/rounded_corner"
         android:fontFamily="monospace"
-        android:text="Alarm" />
-
+        android:onClick="alarm"
+        android:text="Alarm"
+        android:textColor="#000000"
+        tools:ignore="OnClick" />
 
     <ImageButton
         android:layout_width="97dp"
