--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -5,12 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <TextView
+    <WebView
+        android:id="@+id/youtubeview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="This is my Tutorial Activity"
         android:textSize="22dp"
         android:textStyle="bold" />
 
-</LinearLayout>
+    </LinearLayout>
