--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorAccent">
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
@@ -17,8 +18,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="19dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#89CEEE" android:endColor="#89CEEE" />
+           <stroke android:width="1dip" android:color="#5e7974" />
+          <gradient android:angle="-90" android:startColor="#89CEEE" android:endColor="#89CEEE" />
         </shape>
     </item>
-</selector>
+</ripple>
