--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -11,15 +11,15 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle"  >
             <corners android:radius="5dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <solid android:color="#58857e"/>
+           <stroke android:width="1dip" android:color="#0B0E0D" />
+            <solid android:color="#090E0D"/>
         </shape>
     </item>
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="19dip" />
-           <stroke android:width="1dip" android:color="#5e7974" />
-          <gradient android:angle="-90" android:startColor="#89CEEE" android:endColor="#89CEEE" />
+           <stroke android:width="1dip" android:color="#070A0A" />
+          <gradient android:angle="-90" android:startColor="#673AB7" android:endColor="#9C27B0" />
         </shape>
     </item>
 </ripple>
