--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,36 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#05161E"
+    android:background="#000000"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
 
-
-
     <Button
         android:id="@+id/summary"
-        android:drawableTop="@drawable/brief"
-        android:layout_margin="25dp"
         android:layout_width="141dp"
         android:layout_height="127dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/rounded_corner"
+        android:drawableTop="@drawable/brief"
         android:fontFamily="monospace"
-        android:text="Convert Text to Summary"
         android:onClick="summary"
-        android:textColor="#000000"
-       />
-
+        android:text="Convert Text to Summary"
+        android:textColor="#000000" />
 
 
     <Button
         android:id="@+id/alarm"
-        android:drawableTop="@drawable/alarm_clock"
         android:layout_width="141dp"
         android:layout_height="127dp"
         android:layout_alignStart="@+id/notepad"
         android:layout_alignTop="@+id/tutorial"
+        android:layout_marginStart="-2dp"
+        android:layout_marginTop="-2dp"
         android:background="@drawable/rounded_corner"
+        android:drawableTop="@drawable/alarm_clock"
         android:fontFamily="monospace"
         android:onClick="alarm"
         android:text="Alarm"
@@ -41,13 +42,14 @@
 
     <Button
         android:id="@+id/tutorial"
-        android:drawableTop="@drawable/tutorial"
         android:layout_width="141dp"
         android:layout_height="127dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/summary"
-        android:layout_marginBottom="168dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="265dp"
         android:background="@drawable/rounded_corner"
+        android:drawableTop="@drawable/tutorial"
         android:fontFamily="monospace"
         android:onClick="tutorial"
         android:text="Tutorial"
@@ -56,28 +58,68 @@
 
     <Button
         android:id="@+id/notepad"
-        android:drawableTop="@drawable/notepad"
-        android:onClick="notepad"
-        android:layout_margin="25dp"
+
         android:layout_width="141dp"
         android:layout_height="127dp"
+        android:layout_alignTop="@+id/summary"
+        android:layout_alignRight="@+id/summary"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="false"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="-210dp"
         android:background="@drawable/rounded_corner"
+        android:drawableTop="@drawable/notepad"
         android:fontFamily="monospace"
+        android:onClick="notepad"
         android:text="Notepad"
-        android:textColor="#000000"/>
+        android:textColor="#000000" />
 
-
-
-    <ImageButton
-        android:layout_width="97dp"
-        android:layout_height="79dp"
-        android:layout_alignParentBottom="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:src="@drawable/home"
-        />
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/home"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+
+            android:src="@drawable/home" />
+
+        <ImageButton
+            android:id="@+id/settings"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentBottom="true"
+
+            android:layout_toEndOf="@+id/home"
+            android:src="@drawable/settings" />
+
+        <ImageButton
+            android:id="@+id/profile"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentBottom="true"
+
+            android:layout_toEndOf="@+id/settings"
+            android:src="@drawable/profile" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+
+
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/profile"
+            android:src="@drawable/search" />
+    </LinearLayout>
 
 
 </RelativeLayout>
