--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
     tools:context=".MainActivity">
 
 
+
+    <Switch
+        android:id="@+id/simpleSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#3F51B5"
+        android:layout_alignParentEnd="true"/>
+
     <Button
         android:id="@+id/summary"
         android:layout_width="141dp"
@@ -89,16 +97,26 @@
             android:layout_height="79dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-
+            android:background="#123456"
             android:src="@drawable/home" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:background="#123423"
+            android:layout_toEndOf="@+id/home"
+            android:src="@drawable/search" />
 
         <ImageButton
             android:id="@+id/settings"
             android:layout_width="97dp"
             android:layout_height="79dp"
             android:layout_alignParentBottom="true"
-
-            android:layout_toEndOf="@+id/home"
+            android:background="#E66B6B"
+            android:clickable="true"
+            android:onClick="setting"
+            android:layout_toEndOf="@+id/search"
             android:src="@drawable/settings" />
 
         <ImageButton
@@ -106,19 +124,11 @@
             android:layout_width="97dp"
             android:layout_height="79dp"
             android:layout_alignParentBottom="true"
-
+            android:background="#343456"
             android:layout_toEndOf="@+id/settings"
             android:src="@drawable/profile" />
 
-        <ImageButton
-            android:id="@+id/search"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
 
-
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/profile"
-            android:src="@drawable/search" />
     </LinearLayout>
 
 
