--- a/app/src/main/res/layout/activity_notepad.xml
+++ b/app/src/main/res/layout/activity_notepad.xml
@@ -5,12 +5,92 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <TextView
+    <EditText
+        android:id="@+id/userNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginLeft="96dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="96dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:text="This is my Notepad Activity"
-        android:textSize="22dp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/home"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:background="#123456"
+            android:clickable="true"
+            android:onClick="homed"
+            android:src="@drawable/home" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:background="#123423"
+            android:layout_toEndOf="@+id/home"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/search" />
+
+        <ImageButton
+            android:id="@+id/settings"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/search"
+            android:background="#E66B6B"
+            android:clickable="true"
+            android:onClick="setting"
+            android:src="@drawable/settings" />
+
+        <ImageButton
+            android:id="@+id/profile"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/settings"
+            android:background="#343456"
+            android:src="@drawable/profile" />
+        <!--android:layout_alignParentBottom="true" -->
+
+    </RelativeLayout>
 
 </LinearLayout>
