--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -23,4 +23,56 @@
         android:layout_marginBottom="203dp"
         android:text="Stop" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/home"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:background="#123456"
+            android:clickable="true"
+            android:onClick="homed"
+            android:src="@drawable/home" />
+
+        <ImageButton
+            android:id="@+id/search"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:background="#123423"
+            android:layout_toEndOf="@+id/home"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/search" />
+
+        <ImageButton
+            android:id="@+id/settings"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/search"
+            android:background="#E66B6B"
+            android:clickable="true"
+            android:onClick="setting"
+            android:src="@drawable/settings" />
+
+        <ImageButton
+            android:id="@+id/profile"
+            android:layout_width="97dp"
+            android:layout_height="79dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/settings"
+            android:background="#343456"
+            android:src="@drawable/profile" />
+        <!--android:layout_alignParentBottom="true" -->
+
+    </RelativeLayout>
+
 </RelativeLayout>
