--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,50 +10,66 @@
     <TimePicker
         android:id="@+id/time_picker"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TimePicker>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
+    </TimePicker>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/time_picker"
+        android:padding="5dp"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/start_alarm"
-            android:clickable="true"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start Alarm"/>
+            android:layout_gravity="left"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:text="Start Alarm"
+            android:textSize="25dp" />
 
         <Button
             android:id="@+id/end_alarm"
-            android:clickable="true"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="End Alarm"/>
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:text="End Alarm"
+            android:textSize="25dp" />
 
+
+        <TextView
+            android:id="@+id/alarm_update"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:fontFeatureSettings="@string/action_settings"
+            android:includeFontPadding="true"
+            android:text="Did you set the alarm?"
+            android:textAlignment="center"
+            android:textColor="#02203D"
+            android:textSize="30dp" />
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/alarm_update"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Did you set the alarm"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="0dp"
-        android:orientation="horizontal">
+        android:layout_gravity="end"
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
         <ImageButton
             android:id="@+id/home"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
             android:background="#123456"
             android:clickable="true"
             android:onClick="homed"
@@ -61,20 +77,13 @@
 
 
         <ImageButton
-            android:id="@+id/search_a"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/home"
-            android:background="#123423"
-            android:src="@drawable/search" />
-
-        <ImageButton
             android:id="@+id/settings_a"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/search_a"
+            android:layout_centerInParent="true"
+            android:layout_toEndOf="@+id/home"
+            android:layout_weight="1"
             android:background="#E66B6B"
             android:clickable="true"
             android:onClick="setting"
@@ -82,18 +91,29 @@
 
         <ImageButton
             android:id="@+id/profile_a"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/settings_a"
+            android:layout_weight="1"
             android:background="#343456"
             android:src="@drawable/profile" />
 
-        <!--android:layout_alignParentBottom="true" -->
+        <!-- <Button
+            android:id="@+id/snooze"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="162dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="161dp"
+            android:clickable="true"
+            android:text="Snooze" />
+        //android:onClick="true"/>-->
 
-    </RelativeLayout>
+    </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
