--- a/app/src/main/res/layout/activity_notepad.xml
+++ b/app/src/main/res/layout/activity_notepad.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -40,57 +40,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="0dp"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/home"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:background="#123456"
-            android:clickable="true"
-            android:onClick="homed"
-            android:src="@drawable/home" />
-
-        <ImageButton
-            android:id="@+id/search"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
-            android:background="#123423"
-            android:layout_toEndOf="@+id/home"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/search" />
-
-        <ImageButton
-            android:id="@+id/settings"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/search"
-            android:background="#E66B6B"
-            android:clickable="true"
-            android:onClick="setting"
-            android:src="@drawable/settings" />
-
-        <ImageButton
-            android:id="@+id/profile"
-            android:layout_width="97dp"
-            android:layout_height="79dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/settings"
-            android:background="#343456"
-            android:src="@drawable/profile" />
-        <!--android:layout_alignParentBottom="true" -->
-
-    </RelativeLayout>
-
-</LinearLayout>
+   </RelativeLayout>
