--- a/app/src/main/res/layout/activity_note_window.xml
+++ b/app/src/main/res/layout/activity_note_window.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NoteWindow">
+    tools:context=".NoteWindow"
+    android:background="#95f49c9c">
 
     <TextView
         android:id="@+id/noteTitleText"
@@ -16,6 +17,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/title_note"
+        android:textColor="#141313"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,10 +30,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:autofillHints="@string/title_hint"
+        android:hint="Untitled Note"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/note_title"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/noteTitleText"
@@ -67,8 +69,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/noteTitleValue"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_save" />
-
-
-
+        android:src="@drawable/save"/>
 </android.support.constraint.ConstraintLayout>
