--- a/app/src/main/res/layout/note_view.xml
+++ b/app/src/main/res/layout/note_view.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:background="#95f49c9c">>
 
     <TextView
     android:id="@+id/note_name"
@@ -24,6 +25,6 @@
     android:layout_height="40dp"
     android:layout_weight="1"
     android:contentDescription="@string/deleteNote"
-    app:srcCompat="@android:drawable/ic_menu_delete" />
+        android:src="@drawable/delete" />
 
 </LinearLayout>
